--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,24 @@
 .gap-10 {
     gap: 10px;
 }
+.max-w-948{
+    max-width: 948px;
+}
+.icon-1{
+    bottom: 5%;
+    left: 3.5%;
 
+}
+.playbtn{
+    bottom: 5%;
+    right: 3.5%;
+    background-image: linear-gradient( 135deg , var(--gradient-white ) , var(--golden));
+}
+
+
+.pt-44{
+    padding-top: 44px;
+}
 
 
 .gap-36 {
@@ -88,7 +105,29 @@
 
 
 
+.first-box {
+    box-shadow: 0px 4px 20px 0px #B6B6B640;
+    background-color: white !important;
+    border: 1px solid transparent;
+    background-clip: padding-box;
+    padding: 22px 25px 19px 25px;
+}
 
+.first-box:hover {
+    box-shadow: 0px 8px 40px 0px #55555540;
+}
+
+.first-box::after {
+    position: absolute;
+    top: -1px;
+    bottom: -1px;
+    left: -1px;
+    right: -1px;
+    background: linear-gradient(#EEDDBF52, #C78A1152);
+    content: '';
+    z-index: -1;
+    border-radius: 16px;
+}
 
 
 
@@ -124,14 +163,28 @@
 .cursor-pointer{
     cursor: pointer;
 }
-
+.rounded-16{
+    border-radius: 16px;
+}
+.pt-32{
+    padding-top: 32px;
+}
 
 
 .duration-300 {
     transition: all 300ms linear;
 }
 
+.translate-y-76 {
+    transform: translateY(-76px);
+}
+.Ellipse21 {
+    left: 0;
+}
 
+.max-w-399{
+    max-width: 399px;
+}
 
 
 .hamburger {
@@ -205,11 +258,17 @@
     .py-sm-30 {
         padding: 30px 0 !important;
     }
+    .pb-sm-60{
+        padding-bottom: 60px !important;
+    }
 }
 
 @media (min-width: 768px) {
     .pt-md-139 {
         padding-top: 139px !important;
+    }
+    .first-box {
+        padding: 44px 51px 38px 51px !important;
     }
 }
 
@@ -218,6 +277,12 @@
 @media (min-width: 992px) {
     .gap-lg-57 {
         gap: 57px !important;
+    }
+    .pb-lg-90{
+        padding-bottom: 90px !important;
+    }
+    .pt-lg-44{
+        padding-top: 44px !important; 
     }
 
 }
