--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,9 @@
     gap: 36px;
 }
 
+.pt-28{
+    padding-top: 28px;
+}
 
 
 
@@ -135,6 +138,37 @@
     color: white;
 }
 
+.tab-box {
+    padding: 18px 32px;
+    border-radius: 8px;
+    transition: all 300ms linear;
+    background: transparent;
+    background-image: linear-gradient(to bottom, var(--gradient-white), var(--golden));
+    background-position: 0 100%;
+    background-size: 2px 100%;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+.tab1active .tab-box::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 8px;
+    padding: 1px;
+    background: linear-gradient(45deg, var(--gradient-white), var(--golden));
+    -webkit-mask:
+        linear-gradient(#fff 0 0) content-box,
+        linear-gradient(#fff 0 0);
+    -webkit-mask-composite: xor;
+    mask-composite: exclude;
+}
+
+.tab1active .tab-box {
+    border: 2zpx solid transparent;
+    box-shadow: 0px 0px 20px 4px #D8D8D840;
+    background-size: 0px 0px;
+}
 
 
  .btn-1 {
@@ -169,12 +203,42 @@
 .pt-32{
     padding-top: 32px;
 }
+.max-w-524{
+    max-width: 524px;
+}
+.opacity-7{
+    opacity: 0.7;
+}
+.rounded-6{
+    border-radius: 6px !important;
+}
+.img-border{
+    border: 16px solid transparent;
+    background:linear-gradient(140.31deg, rgba(198, 177, 139, 0.6) -25.54%, rgba(255, 187, 0, 0.144) 54.57%, rgba(255, 164, 0, 0.6) 136.37%) padding-box,
+    linear-gradient(140.31deg, rgba(198, 177, 139, 0.6) -25.54%, rgba(255, 187, 0, 0.144) 54.57%, rgba(255, 164, 0, 0.6) 136.37%) border-box;
+    border-radius: 6px !important;        
+}
+
 
 
 .duration-300 {
     transition: all 300ms linear;
 }
+.Group {
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.pt-48{
+    padding-top: 48px;
 
+}
+
+
+.group2 {
+    bottom: 0;
+    right: 0;
+}
 .translate-y-76 {
     transform: translateY(-76px);
 }
@@ -251,6 +315,9 @@
 } 
 
 @media (max-width: 575px) {
+    .tab-box {
+        padding: 9px 16px !important;
+    }
 
 }
 
@@ -260,6 +327,15 @@
     }
     .pb-sm-60{
         padding-bottom: 60px !important;
+    }
+    .pt-sm-60{
+        padding-top: 60px !important;
+    }
+    .pb-sm-48{
+        padding-bottom: 48px !important;
+    }
+    .pb-sm-44{
+        padding-bottom: 44px;
     }
 }
 
@@ -283,6 +359,12 @@
     }
     .pt-lg-44{
         padding-top: 44px !important; 
+    }
+    .pt-lg-91{
+        padding-top: 91px !important;
+    }
+    .max-lg-w-485{
+        max-width: 485px;
     }
 
 }
