--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,10 +213,9 @@
     border-radius: 6px !important;
 }
 .img-border{
-    border: 16px solid transparent;
-    background:linear-gradient(140.31deg, rgba(198, 177, 139, 0.6) -25.54%, rgba(255, 187, 0, 0.144) 54.57%, rgba(255, 164, 0, 0.6) 136.37%) padding-box,
-    linear-gradient(140.31deg, rgba(198, 177, 139, 0.6) -25.54%, rgba(255, 187, 0, 0.144) 54.57%, rgba(255, 164, 0, 0.6) 136.37%) border-box;
-    border-radius: 6px !important;        
+    padding: 16px;
+    border-radius: 21px;     
+    background-image: linear-gradient(140.31deg, rgba(198, 177, 139, 0.6) -25.54%, rgba(255, 187, 0, 0.144) 54.57%, rgba(255, 164, 0, 0.6) 136.37%);
 }
 
 
@@ -226,14 +225,79 @@
 }
 .Group {
     left: 0;
-    top: 50%;
-    transform: translateY(-50%);
+    top: -75%;
+    height: 1167px;
+    width: 1208px;
+}
+.Ellipse4sec {
+    bottom: 0;
+    right: 0;
+}
+.w-40{
+    width: 40px;
+}
+.rounded-24{
+
+    border-radius: 24px;
 }
 .pt-48{
     padding-top: 48px;
 
 }
 
+.max-w-662{
+    max-width: 662px;
+}
+
+.Ellipse4first {
+    left: 0;
+    top: 0;
+}
+.bg-third-img {
+    background-image: url(../img/Frame12.png);
+    background-position: 100% 100%;
+    background-size: cover;
+}
+
+
+
+.card {
+    background-clip: padding-box;
+    background-color: transparent;
+    /* max-width: 364px !important; */
+    background: #CA99440A !important;
+    transition: all 300ms linear;
+}
+.card::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 24px;
+    padding: 0.5px !important;
+    background: linear-gradient(135deg, var(--gradient-white), var(--golden) 32%);
+    -webkit-mask:
+        linear-gradient(#fff 0 0) content-box,
+        linear-gradient(#fff 0 0);
+    -webkit-mask-composite: xor;
+    mask-composite: exclude;
+}
+.card:hover.card::before {
+    background: linear-gradient(135deg, transparent, transparent);
+}
+.card:hover {
+    background: #CA99443D !important;
+} 
+.card::after {
+    position: absolute;
+    top: -1px;
+    bottom: -1px;
+    left: -1px;
+    right: -1px;
+    background: linear-gradient(#EEDDBF52, #C78A1152);
+    content: '';
+    z-index: -1;
+    border-radius: 24px;
+}
 
 .group2 {
     bottom: 0;
@@ -337,6 +401,9 @@
     .pb-sm-44{
         padding-bottom: 44px;
     }
+    .pt-sm-60{
+        padding-top: 60px !important;
+    }
 }
 
 @media (min-width: 768px) {
@@ -366,11 +433,30 @@
     .max-lg-w-485{
         max-width: 485px;
     }
+    .pt-lg-100{
+        padding-top: 100px !important;
+    }
 
+    .pb-lg-100{
+        padding-bottom: 100px !important;
+    }
+    .pt-117{
+        padding-top: 117px;
+    }
 }
+
 @media (max-width: 1200px) {
     
 }
+@media (max-width: 1200px) {
+    .box-4 {
+        overflow-x: scroll;
+    }
+    .box-5 {
+        overflow-x: scroll;
+    }
+}
+
 
 @media (min-width:1200px) {
     .gap-xl-141 {
