--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,7 @@
 }
 
 
- .btn-1 {
+ .btn-1 {    
     border-radius: 2px;
     padding: 12px 24px;
     transition: all 300ms linear;
@@ -197,8 +197,38 @@
 .cursor-pointer{
     cursor: pointer;
 }
+.slick-btn {
+    width: 40px;
+    border: 2px solid var(--golden);
+    background-color: transparent;
+    height: 40px;
+}
+.p-18{
+    padding: 18px;
+}
+.slick-btn:hover {
+    background-image: linear-gradient(to bottom left, var(--gradient-white), var(--golden)) !important;
+}
+
+.pre-btn {
+    left: -30px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.next-btn {
+    right: -30px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.slick-btn:hover svg path {
+    fill: white;
+}
 .rounded-16{
     border-radius: 16px;
+}
+.mb-20{
+    margin-bottom: 20px;
 }
 .pt-32{
     padding-top: 32px;
@@ -244,9 +274,21 @@
     padding-top: 48px;
 
 }
+.Ellipse41 {
+    left: 0;
+    top: 0;
+}
+
+.groupslick {
+    right: 0;
+    top: 18%;
+}
 
 .max-w-662{
     max-width: 662px;
+}
+.px-28{
+    padding: 0 28px ;
 }
 
 .Ellipse4first {
@@ -257,6 +299,22 @@
     background-image: url(../img/Frame12.png);
     background-position: 100% 100%;
     background-size: cover;
+}
+
+.second-box {
+    box-shadow: 0px 0px 20px 4px #D8D8D840;
+    border: 1px solid #EEDDBF52;
+}
+
+.second-box:hover {
+    box-shadow: 0px 0px 40px 8px #a2a2a240;
+}
+
+.second-box:hover svg path {
+    fill: var(--golden);
+}
+.max-w-1000{
+    max-width: 1000px;
 }
 
 
@@ -298,6 +356,28 @@
     z-index: -1;
     border-radius: 24px;
 }
+.slider-box::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 24px;
+    padding: 1px;
+    background: linear-gradient(180deg, var(--gradient-white), var(--golden));
+    -webkit-mask:
+        linear-gradient(#fff 0 0) content-box,
+        linear-gradient(#fff 0 0);
+    -webkit-mask-composite: xor;
+    mask-composite: exclude;
+}
+.slider-img{
+    padding: 18px;
+    box-shadow: 0px 0px 14.139328956604004px 2.8278656005859375px #D8D8D840;
+
+}
+.mt-18{
+    margin-top: 18px;
+}
+
 
 .group2 {
     bottom: 0;
@@ -404,6 +484,9 @@
     .pt-sm-60{
         padding-top: 60px !important;
     }
+    .py-sm-60{
+        padding: 60px 0 !important;
+    }
 }
 
 @media (min-width: 768px) {
@@ -412,6 +495,15 @@
     }
     .first-box {
         padding: 44px 51px 38px 51px !important;
+    }
+    .p-md-40{
+        padding: 40px !important;
+    }
+    .max-md-w-551{
+        max-width: 551px;
+    }
+    .max-md-w-337{
+        max-width: 337px !important;
     }
 }
 
@@ -442,6 +534,9 @@
     }
     .pt-117{
         padding-top: 117px;
+    }
+    .py-lg-130{
+        padding: 130px 0 !important;
     }
 }
 
