--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,7 @@
 
 
 .nav-link:hover {
-    color: white;
+    color: var(--white);
 }
 
 .tab-box {
@@ -169,9 +169,85 @@
     box-shadow: 0px 0px 20px 4px #D8D8D840;
     background-size: 0px 0px;
 }
+.bg-Services5{
+    background-image: url(../img/Services5.png);
+    background-position: 100% 100%;
+    background-size: cover;
+}
+.Ellipse91 {
+    top: 0;
+    left: 0;
+}
+.Ellipse92 {
+    bottom: 0;
+    right: 0;
+}
+.border-bottom-gray {
+    border-bottom: 1px solid #D7C8AE52;
+}
 
 
- .btn-1 {    
+/* ----first-time */
+.timeline-item {
+    position: relative;
+    padding: 0 0 47px 53px;
+    margin-left: 25px;
+}
+
+.left-line {
+    top: 0;
+    left: 0;    
+    border: 1px solid transparent;
+    background: linear-gradient(white, white) padding-box, linear-gradient(146.26deg, rgba(238, 221, 191, 0.32) 6.74%, rgba(199, 138, 17, 0.32) 110.03%) border-box;
+    height: 100%;
+}
+
+.border_reduce .left-line {
+    height: 0 !important;
+}
+
+.timeline-step {
+    margin-bottom: 12px;
+}
+
+.border-bottom-gray {
+    border-bottom: 1px solid #D7C8AE52;
+}
+
+.timeline-item .timeline-icon {
+    position: absolute;
+    left: -20px;
+}
+
+.timeline-line {
+    position: absolute;
+    left: 0;
+}
+
+@media(min-width:992px) {
+    .timeline-item {
+        margin-left: 120px;
+    }
+
+    .timeline-item .timeline-step {
+        position: absolute;
+        left: -12%;
+        text-align: right
+    }
+
+    .timeline-step {
+        margin-bottom: 0;
+    }
+
+    .timeline-item .timeline-content {
+        padding: 0;
+        background-color: transparent
+    }
+}
+
+/* ----------first-time */
+
+.btn-1 {    
     border-radius: 2px;
     padding: 12px 24px;
     transition: all 300ms linear;
@@ -377,7 +453,9 @@
 .mt-18{
     margin-top: 18px;
 }
-
+.pb-48{
+    padding-bottom: 48px;
+}
 
 .group2 {
     bottom: 0;
@@ -480,10 +558,7 @@
     }
     .pb-sm-44{
         padding-bottom: 44px;
-    }
-    .pt-sm-60{
-        padding-top: 60px !important;
-    }
+    }    
     .py-sm-60{
         padding: 60px 0 !important;
     }
@@ -537,6 +612,16 @@
     }
     .py-lg-130{
         padding: 130px 0 !important;
+    }
+    .pb-lg-120{
+        padding-bottom: 120px !important;
+    }
+    .pt-lg-120{
+        padding-top: 120px !important;
+
+    }
+    .pt-lg-64{
+        padding-top: 64px !important;
     }
 }
 
