--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,6 +259,14 @@
     background-repeat: no-repeat;
 }
 
+.group61 {
+    bottom: 0;
+    right: 0;
+}
+.Ellipse7first {
+    left: 0;
+    top: 0;
+}
 .btn-1:hover {
     border-radius: 70px;
     background-size: 100% 0px;
@@ -391,6 +399,27 @@
 }
 .max-w-1000{
     max-width: 1000px;
+}
+.max-w-338{
+    max-width: 338px;
+}
+.max-w-435{
+    max-width: 435px;
+}
+.pb-10{
+    padding-bottom: 10px;
+}
+.mt-14{
+    margin-top: 14px;
+}
+.box-6{
+    padding: 10px 20px;
+    border-radius: 4.6px;
+    box-shadow: 0px 0px 15.4375px 3.0875000953674316px #D8D8D840;
+
+}
+.max-w-432{
+    max-width: 432px;
 }
 
 
@@ -579,6 +608,15 @@
     }
     .max-md-w-337{
         max-width: 337px !important;
+    }
+    .max-md-w-575{
+        max-width: 575px !important;
+    }
+    .pb-md-48{
+        padding-bottom: 48px !important;
+    }
+    .pb-md-32{
+        padding-bottom: 32px !important;
     }
 }
 
