--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -26,11 +26,15 @@
     --golden: #E0B764;
     --gradient-white: #F4EAD8;
     --white: #fff;
-
-    
-
- 
-
+    --first-shadow:#B6B6B640;
+    --border-light:#EEDDBF52;
+    --border-dark:#C78A1152;
+    --border-bottom: #0000003D;
+    --card-bg:#CA99440A;
+    --card-hover:#CA99443D;
+    --acc-border:#F1E2C5;
+    --input-border: #FFFFFF29;
+    --tab-2-border: #FFFFFF52;
 }
 .color-black{
     color: var(--black);
@@ -65,8 +69,6 @@
 .line-height-83{
     line-height: var(--line-height-83);
 }
-
-
 
 
 .fs-sm{
@@ -105,7 +107,7 @@
     :root {
         --fs-sm: 14px;    
         --fs-md: 16px;
-        --fs-lg: 16px;
+        --fs-lg: 14px;
         --fs-xl: 16px;
         --fs-2xl: 20px;
         --fs-3xl: 24px;
@@ -115,8 +117,6 @@
         --fs-7xl: 58px;
     
     
-    
-    
         --line-height-24: 22px;
         --line-height-25: 24px;
         --line-height-27: 25px;
@@ -124,17 +124,6 @@
         --line-height-38: 32px;
         --line-height-55: 38px;
         --line-height-68: 55px;
-        --line-height-83: 68px;
-    
-        
-    
-     
-    
-    }
- 
-
-    
-}
-
-
-  
+        --line-height-83: 58px;
+    }   
+}  
