--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,6 +224,7 @@
 /* -------------------------background-image*/
 .bg-hero-img {
     background-image: url(../img/Hero.png);
+    background-size: cover;
 }
 
 .bg-third-img {
@@ -284,7 +285,7 @@
 
 .Ellipse11 {
     right: 0;
-    top: 3%;
+    top: 0;
 }
 
 .Ellipse12 {
@@ -340,6 +341,9 @@
 .Ellipsefirst {
     top: 0;
     left: 0;
+}
+.h-22{
+    height: 22px;
 }
 
 .tab-box {
@@ -655,8 +659,8 @@
 
 .tab-2 {
     border-bottom: 1px solid var(--tab-2-border);
+    min-width: 185px;
 }
-
 .slider-img {
     padding: 18px;
     box-shadow: 0px 0px 14px 2px var(--first-shadow);
@@ -736,6 +740,10 @@
 .Ellipse101 {
     top: -50%;
     right: 0;
+}
+.Ellipse22{
+    right: 0;
+    top: -60%;
 }
 
 .social-icon:hover {
@@ -844,6 +852,7 @@
         bottom: 8%;
         right: 6%;        
     }
+   
 }
 
 @media (min-width: 575px) {
@@ -883,10 +892,10 @@
 }
 
 @media (max-width:768px) {
-    .bg-md-black{
-        background-color: black;
+    .active {                        
+        background-position: 0% 100%;
+        background-size: 100% 4px ;        
     }
-    
 }
 
 @media (min-width: 768px) {
@@ -1073,4 +1082,4 @@
         gap: 141px;
     }
 }
-
+    
