--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,10 +61,11 @@
 .pt-32 {
     padding-top: 32px;
 }
-
-.pt-44 {
+.pt-44{
     padding-top: 44px;
 }
+
+
 
 .pt-48 {
     padding-top: 48px;
@@ -251,6 +252,8 @@
 
 .bg-fre-img {
     background-image: url(../img/FAQ.png);
+    background-size: cover;
+    background-position: center;
 }
 
 .footer-img {
@@ -487,8 +490,8 @@
 }
 
 .img-border {
-    padding: 16px;
-    border-radius: 21px;
+    padding: 9px;
+    border-radius: 10px;
     background-image: linear-gradient(140.31deg, rgba(198, 177, 139, 0.6) -25.54%, rgba(255, 187, 0, 0.144) 54.57%, rgba(255, 164, 0, 0.6) 136.37%);
 }
 
@@ -845,12 +848,12 @@
         width: 20px !important;    
     }
     .icon-1 {
-        bottom: 5%;
-        left: 7%;
+        bottom: 3%;
+        left: 4%;
     }
     .playbtn {
-        bottom: 8%;
-        right: 6%;        
+        bottom: 6%;
+        right: 3.5%;        
     }
    
 }
@@ -888,6 +891,13 @@
     .timeline-item {
         margin-left: 60px;
     }
+    .pt-sm-44 {
+        padding-top: 44px !important;
+    }
+    .img-border {
+        padding: 16px;
+        border-radius: 21px;      
+    }
    
 }
 
@@ -897,7 +907,7 @@
         background-size: 100% 4px ;        
     }
     .overflow-x-md-scroll{
-        overflow-x: scroll;
+        overflow-x: scroll !important;
     }
 }
 
